# kerminal

./: README.md  package-lock.json  package.json
docs/guide/: features.md
docs/vi/guide/: features.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/core/: mod.rs
src-tauri/src/core/graphics/: mod.rs  sixel.rs
src-tauri/src/models/terminal/: terminal.rs
src/components/ui/: Panel.vue  Terminal.vue  TerminalManager.vue
