[package]
name = "Kerminal"
version = "2.5.7"
description = "Modern Terminal with SSH, Tunneling & Cross-Device Sync"
license = "MIT"
repository = "https://github.com/klpod221/kerminal"
authors = ["klpod221 <klpod221@gmail.com>"]
edition = "2021"

[lib]
name = "kerminal"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
sysinfo = "0.37"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
russh = "0.45"
russh-keys = "0.45"
russh-config = "0.54"
russh-sftp = "2"
portable-pty = "0.9"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
anyhow = "1.0"
regex = "1.5"
gethostname = "0.4"
dirs = "5.0"

# Database dependencies
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "mysql",
    "postgres",
    "chrono",
    "uuid",
] }
mongodb = "2.8"
bson = "2.8"

# Encryption dependencies
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"

# Graphics protocol support
image = "0.25"

# Keychain integration
keyring = "2.3"

# Additional utilities
futures = "0.3"
dashmap = "5.5"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
walkdir = "2.5.0"
reqwest = { version = "0.12.25", features = ["json", "rustls-tls"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
